<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:text="@string/weightTitle"
        android:id="@+id/tv_weight_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/headerItemsFontStyle"
        />

    <TextView
        style="@style/headerItemsFontStyle"
        android:text="@string/heightTitle"
        android:id="@+id/tv_height_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:text="@string/genderTitle"
        style="@style/headerItemsFontStyle"
        android:id="@+id/tv_gender_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</LinearLayout>