<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.add_bmi_details.AddBmiDetailsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_personal_details"
        style="@style/RalewayRegualrStyle"
        android:id="@+id/tv_enter_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        />

    <EditText
        android:id="@+id/ed_name_user"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_shape"
        android:gravity="start|center"
        android:hint="@string/name_title"
        android:textColor="#19769F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_details" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_your_body_mass_index_title"
        android:textColor="@color/gray_color"
        style="@style/PoppinsLightStyle"
        android:id="@+id/tv_calculate_body_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_name_user"
        android:layout_marginTop="60dp"
        />

    <include
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_calculate_body_title"
        android:id="@+id/header"
        layout="@layout/bmi_item_header_layout">
    </include>

    <include
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:id="@+id/body"
        layout="@layout/bmi_item_layout">
    </include>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="150dp"-->
<!--        android:id="@+id/recycler"-->
<!--        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/header"-->

<!--        />-->


    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate_title"
        android:textAppearance="@string/calculate_title"
        android:id="@+id/btn_calculate"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>